Devise configuration, User model, views
* Basic User model courtesy of rails g devise User
* DummyController#index includes a sign-out link (no other easy way to log out, currently)

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,4 +7,10 @@
     = javascript_include_tag 'application'
     = csrf_meta_tags
   %body
+    .notice
+      = notice
+
+    .alert
+      = alert
+
     = yield
