--- a/app/views/guesses/_form.html.haml
+++ b/app/views/guesses/_form.html.haml
@@ -1,9 +1,9 @@
-= form_for @value do |f|
-  - if @value.errors.any?
+= form_for @guess do |f|
+  - if @guess.errors.any?
     #error_explanation
-      %h2= "#{pluralize(@value.errors.count, "error")} prohibited this value from being saved:"
+      %h2= "#{pluralize(@guess.errors.count, "error")} prohibited this guess from being saved:"
       %ul
-        - @value.errors.full_messages.each do |msg|
+        - @guess.errors.full_messages.each do |msg|
           %li= msg
 
   .field
